--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                     {{ event[1] }}
                   </p>
                   <p>
-                    <i class="fa-solid fa-location-dot"></i> {{ event[2] }}
+                    <i class="fa-solid fa-location-dot"></i> {{ event|detect_neos_url|safe }}
                   </p>
                   <p>
                     <a href="#"><i class="fa-brands fa-discord"></i> {{ event[5] }}</a>
