Update the website with the new domain

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>community_events.neos</title>
+    <title>neos-community.events</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <!-- Bulma Version 0.9.0-->
@@ -24,7 +24,7 @@
           <div class="columns">
             <div class="column is-12">
               <div class="container content">
-                <h1 class="title">community_events.neos</h1>
+                <h1 class="title">neos-community.events</h1>
                 <h2 class="subtitle">NeosVR group events aggregator</h2>
               </div>
             </div>
@@ -42,6 +42,9 @@
                 <div class="message-body">
                     <p>If you want to have your group listed or have any question please contact GrayBoltWolf or Brodokk on NeosVR.</p>
                     <p>Keep in mind this is a list of events of groups events gathered by GrayBoltWolf and Brodokk. This is <strong>not</strong> an exhaustive list of NeosVR events.</p>
+                    <br/>
+                    <p>In the facet in NeosVR you will have the server URL finishing in <samp>neos.boltwolf.net</samp> but the official website domain should finish in <samp>neos-community.events</samp>.
+                    The two are correct and official managed by us.</p>
                 </div>
             </article>
 
@@ -79,7 +82,7 @@
               <article class="message">
                 <div class="message-body content">
                   It doesn't seem there are currently any public events planned. <strong>But</strong> remember:
-                
+
                   <ul>
                     <li>This <strong>isn't</strong> an exhaustive list of NeosVR events;</li>
                     <li>Private events are not listed here;</li>
@@ -88,7 +91,7 @@
                 </div>
             </article>
             {% endfor %}
-            
+
         </div>
 
 
