Add forgot text

--- a/templates/index.html
+++ b/templates/index.html
@@ -100,7 +100,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>community_events.neos</strong> by GrayBoltWolf and <a href="https://brodokk.space">Brodokk</a>.
+        <strong>neos-community.events</strong> by GrayBoltWolf and <a href="https://brodokk.space">Brodokk</a>.
         Website and API <a href="https://github.com/NeosVR-Community-Projects/community_events.neos">source code</a>.
       </p>
     </div>
