--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,8 @@
                         {{ event[0] }}
                     </p>
                     <div class="my-3 mx-4 is-flex is-flex-direction-column">
-                        <p>{{ event[3]|formatdatetime }}
-                        <p>{{ event[4]|formatdatetime }}</p>
+                        <p>{{ event[6]|formatdatetime }}
+                        <p>{{ event[7]|formatdatetime }}</p>
                     </div>
                 </header>
                 <div class="card-content">
@@ -69,10 +69,10 @@
                     {{ event[1]|parse|safe }}
                   </p>
                   <p>
-                    <i class="fa-solid fa-location-dot"></i> {{ event|detect_neos_url|safe }}
+                    <i class="fa-solid fa-location-dot"></i> {{ event|detect_location|safe }}
                   </p>
                   <p>
-                    <a href="#"><i class="fa-brands fa-discord"></i> {{ event[5] }}</a>
+                    <i class="fa-brands fa-discord"></i> {{ event|detect_community|safe }}
                   </p>
                 </div>
             </div>
