Make the header smaller

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <section class="hero is-link">
+    <section class="hero is-small is-link">
         <div class="hero-body">
           <div class="columns">
             <div class="column is-12">
