--- a/templates/index.html
+++ b/templates/index.html
@@ -51,9 +51,12 @@
                 </div>
             </article>
 
-            <p>
-
-            </p>
+            <button class="button is-large is-fullwidth is-dark js-copy-facet-url">
+              <span>Save facet neosdb url</span>
+              <span class="icon is-small">
+                <i class="fas fa-solid fa-clipboard"></i>
+              </span>
+            </button>
 
             {% for event in events %}
             <div class="container">
@@ -149,5 +152,56 @@
       info.style.display = "block";
     }
   }
+
+  function CopyFacetNeosDBUrlToClipboard(text) {
+    var textArea = document.createElement("textarea");
+
+    textArea.style.position = 'fixed';
+    textArea.style.top = 0;
+    textArea.style.left = 0;
+    textArea.style.width = '2em';
+    textArea.style.height = '2em';
+    textArea.style.padding = 0;
+    textArea.style.border = 'none';
+    textArea.style.outline = 'none';
+    textArea.style.boxShadow = 'none';
+    textArea.style.background = 'transparent';
+
+    textArea.value = text;
+
+    document.body.appendChild(textArea);
+    textArea.focus();
+    textArea.select();
+
+    function resetCopyBtn(oldStatus) {
+      CopyFacetNeosDBUrl.classList.remove(oldStatus);
+      CopyFacetNeosDBUrl.classList.add('is-dark');
+      CopyFacetNeosDBUrl.querySelector('span').innerHTML = 'Save facet neosdb url'
+    }
+
+    function setStatusCopyBtn(msg, status) {
+      var CopyFacetNeosDBUrl = document.querySelector('.js-copy-facet-url');
+      CopyFacetNeosDBUrl.querySelector('span').innerHTML = msg;
+      CopyFacetNeosDBUrl.classList.remove('is-dark');
+      CopyFacetNeosDBUrl.classList.add(status);
+      setTimeout(function () {resetCopyBtn(status)}, 3000);
+    }
+
+    try {
+      var successful = document.execCommand('copy');
+      var msg = successful ? 'successful' : 'unsuccessful';;
+      setStatusCopyBtn('Success copy neosdb url', 'is-success');
+    } catch (err) {
+      setStatusCopyBtn('Error copy neosdb url', 'is-danger');
+    }
+
+    document.body.removeChild(textArea);
+  }
+
+  var CopyFacetNeosDBUrl = document.querySelector('.js-copy-facet-url');
+
+  CopyFacetNeosDBUrl.addEventListener('click', function(event) {
+    CopyFacetNeosDBUrlToClipboard('neosrec:///U-GrayBoltWolf/R-1813632e-ca8f-4492-bec4-9259677394de');
+  });
 </script>
 </html>
