--- a/templates/index.html
+++ b/templates/index.html
@@ -140,9 +140,18 @@
 
               <div class="box">
                 <div class="content">
-                  <strong>Release 2.3.0</strong>
+                  <strong>Update communities</strong>
                   &nbsp;
                   <small>2022-11-16</small>
+                  <br>
+                  <p>Add <code>The MetaMovie</code> community.</p>
+                </div>
+              </div>
+              <div class="box">
+                <div class="content">
+                  <strong>Release 2.3.0</strong>
+                  &nbsp;
+                  <small>2022-11-15</small>
                   <br>
                   <p>Update general website UI. Added new <code>About</code> and <code>News</code> section.</p>
                 </div>
