--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>neos-community.events</title>
+    <link rel="icon" href="data:image/jpeg;base64,{{ logo | safe }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
     <!-- Bulma Version 0.9.0-->
@@ -22,6 +23,11 @@
         color: rgba(240, 240, 240, 0.9);
         font-size: 1.25em;
       }
+      .logo {
+        float: left;
+        max-width: 7.5em;
+        padding-right: 1em;
+      }
     </style>
 </head>
 
@@ -32,6 +38,7 @@
           <div class="columns">
             <div class="column is-12">
               <div class="container content">
+                <img class="logo is-hidden-mobile" src="data:image/jpeg;base64,{{ logo | safe }}">
                 <h1 class="title">neos-community.events</h1>
                 <h2 class="subtitle">NeosVR <strong>non</strong> Exhaustive Communites Events Aggregator</h2>
                 <h3 class="subsubtitle">— by GrayBoltWolf and Brodokk</h3>
