Fix event community link color on mobile

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,14 @@
           background-color: #0009;
         }
 
+        .event .card-content .content a {
+          color: #b4c1ff;
+        }
+
+        .event .card-content .content a:hover {
+          color: #939393;
+        }
+
         .event .card-content .content .subtitle {
           color: #fff;
         }
