--- a/templates/index.html
+++ b/templates/index.html
@@ -223,6 +223,22 @@
 
               <div class="box">
                 <div class="content">
+                  <strong>Release 2.4.0</strong>
+                  &nbsp;
+                  <small>2022-11-17</small>
+                  <br>
+                  <p>
+                    <ul>
+                      <li>Add event image.</li>
+                      <li>Add information about the event date localisation.</li>
+                      <li>Add website icon.</li>
+                      <li>Fix date position on the mobile version.</li>
+                    </ul>
+                  </p>
+                </div>
+              </div>
+              <div class="box">
+                <div class="content">
                   <strong>Update communities</strong>
                   &nbsp;
                   <small>2022-11-16</small>
