Fix images on chrome

--- a/templates/index.html
+++ b/templates/index.html
@@ -50,6 +50,7 @@
         object-fit: cover;
         padding: 12px 12px 0 0;
         width: 100%;
+        overflow: hidden;
       }
 
       .date .mobile-separator {
