Add a spaces between events in desktop version

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,10 @@
         padding-right: 1em;
       }
 
+      .event {
+        margin-bottom: 2em;
+      }
+
       .event .date {
         flex-direction: column;
       }
@@ -64,6 +68,11 @@
       }
 
       @media (max-width: 769px) {
+
+        .event {
+          margin-bottom: 0;
+        }
+
         .event .card-header {
           flex-direction: column;
         }
