--- a/templates/index.html
+++ b/templates/index.html
@@ -244,6 +244,20 @@
               
               <div class="box">
                 <div class="content">
+                  <strong>[WIP] Release 2.6.0</strong>
+                  &nbsp;
+                  <small>2022-12-03</small>
+                  <br>
+                  <p>
+                    <ul>
+                      <li>Break APIv2 with changing the type of separator giving back the ability to use the chars <pre>\n</pre> and <pre>`</pre> in descriptions and other. <bold>Only work for the website, still ignored for the facet.</bold></bold></li>
+                      <li>Small WebUI fixes.</li>
+                    </ul>
+                  </p>
+                </div>
+              </div>
+              <div class="box">
+                <div class="content">
                   <strong>Release 2.5.0</strong>
                   &nbsp;
                   <small>2022-12-03</small>
