--- a/templates/index.html
+++ b/templates/index.html
@@ -244,14 +244,16 @@
               
               <div class="box">
                 <div class="content">
-                  <strong>[WIP] Release 2.6.0</strong>
+                  <strong>Release 2.6.0</strong>
                   &nbsp;
-                  <small>2022-12-03</small>
+                  <small>2022-12-18</small>
                   <br>
                   <p>
                     <ul>
-                      <li>Break APIv2 with changing the type of separator giving back the ability to use the chars <pre>\n</pre> and <pre>`</pre> in descriptions and other. <bold>Only work for the website, still ignored for the facet.</bold></bold></li>
+                      <li>Break APIv2 with changing the type of separator giving back the ability to use the chars <code>\n</code> and <code>`</code> in descriptions and other. <bold>Only work for the website, still ignored for the facet.</bold></bold></li>
                       <li>Small WebUI fixes.</li>
+                      <li>Fix bug of duplicated events and small other fixes.</li>
+                      <li>Add support for community descriptions in the configuration file.</li>
                     </ul>
                   </p>
                 </div>
